[package]
name = "secubot"
version = "1.2.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "Yet another Discord bot!"
readme = "README.md"
repository = "https://github.com/seqre/secubot"
license = "MIT"
keywords = ["discord", "bot", "todo", "ping"]
publish = false

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "cache", "gateway", "http", "model", "rustls_backend", "unstable_discord_api"] }
tokio = { version = "1.20", features = ["full"] }
diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
diesel_migrations = { version = "2.0.0" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
regex = { version = "1.6" }
lazy_static = { version = "1.4" }
itertools = { version = "0.10" }
config = { version = "0.13" }
glob = { version = "0.3" }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.9" }
url_encoded_data = { version = "0.6", optional = true }
octocrab = { version = "0.17" }

[features]
default = ["msg_content"]

# Enable Message Content intent
msg_content = ["dep:url_encoded_data"]
