[package]
name = "secubot"
version = "2.9.0"
edition = "2021"
authors = ["Marek 'seqre' Grzelak <marek.grzelak@seqre.dev>"]
description = "Yet another Discord bot!"
readme = "README.md"
repository = "https://github.com/seqre/secubot"
documentation = "https://docs.rs/crate/secubot"
license = "MIT"
keywords = ["discord", "bot", "todo", "ping"]
exclude = ["/.github/", "/config/"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
poise = { version = "0.5" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = { version = "2.1" }
time = { version = "0.3"}
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
regex = { version = "1.10" }
lazy_static = { version = "1.4" }
itertools = { version = "0.12.0" }
config = { version = "0.13" }
glob = { version = "0.3" }
octocrab = { version = "0.33" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url_encoded_data = { version = "0.6", optional = true }

[features]
default = []

# Enable Message Content intent
msg_content = ["dep:url_encoded_data"]

[profile.release]
lto = true
strip = true  # Automatically strip symbols from the binary.